[gd_scene load_steps=5 format=4 uid="uid://c0j62n20kqfeo"]

[ext_resource type="Script" uid="uid://b7nltwwnf7r1r" path="res://Scripts/level.gd" id="1_7ejlo"]
[ext_resource type="PackedScene" uid="uid://c4h04nltkk8mx" path="res://Scenes/level_objects/goal.tscn" id="2_43g6e"]
[ext_resource type="PackedScene" uid="uid://cunyvm8bl614t" path="res://Scenes/level_objects/banana.tscn" id="3_sti07"]
[ext_resource type="TileSet" uid="uid://c8yf65bgrdbyk" path="res://Resources/TileMaps/level.tres" id="4_gnp6h"]

[node name="level_template" type="Node2D"]
script = ExtResource("1_7ejlo")

[node name="level_objects" type="Node2D" parent="."]

[node name="spawn_pos" type="Marker2D" parent="level_objects"]
position = Vector2(2, 258)

[node name="asteroids" type="Node2D" parent="level_objects"]
process_mode = 4

[node name="goal" parent="level_objects" instance=ExtResource("2_43g6e")]
position = Vector2(2254, 261)

[node name="bananas" type="Node2D" parent="level_objects"]

[node name="banana" parent="level_objects/bananas" instance=ExtResource("3_sti07")]
position = Vector2(325, 245)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6/w4AAAAAAAAAAAD6/w0AAAAAAAAAAAD6/wwAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD6////AAAAAAAAAAD6//7/AAAAAAAAAAD6//3/AAAAAAAAAAD8//v/AAABAAAAAAD9//v/AAABAAAAAAD+//v/AAABAAAAAAD///v/AAABAAAAAAAAAPv/AAABAAAAAAABAPv/AAABAAAAAAACAPv/AAABAAAAAAADAPv/AAABAAAAAAAEAPv/AAABAAAAAAAFAPv/AAABAAAAAAAGAPv/AAABAAAAAAAHAPv/AAABAAAAAAAIAPv/AAABAAAAAAAJAPv/AAABAAAAAAAKAPv/AAABAAAAAAALAPv/AAABAAAAAAAMAPv/AAABAAAAAAANAPv/AAABAAAAAAAOAPv/AAABAAAAAAAPAPv/AAABAAAAAAAQAPv/AAABAAAAAAARAPv/AAABAAAAAAASAPv/AAABAAAAAAATAPv/AAABAAAAAAAUAPv/AAABAAAAAAAVAPv/AAABAAAAAAAWAPv/AAABAAAAAAAXAPv/AAABAAAAAAAYAPv/AAABAAAAAAAZAPv/AAABAAAAAAAaAPv/AAABAAAAAAAbAPv/AAABAAAAAAAcAPv/AAABAAAAAAAdAPv/AAABAAAAAAAeAPv/AAABAAAAAAAfAPv/AAABAAAAAAAgAPv/AAABAAAAAAAhAPv/AAABAAAAAAAiAPv/AAABAAAAAAAjAPv/AAABAAAAAAAkAPv/AAABAAAAAAAlAPv/AAABAAAAAAAmAPv/AAABAAAAAAAnAPv/AAABAAAAAAAoAPv/AAABAAAAAAApAPv/AAABAAAAAAArAP3/AAAAAAEAAAArAP7/AAAAAAEAAAArAP//AAAAAAEAAAArAAAAAAAAAAEAAAArAAEAAAAAAAEAAAArAAIAAAAAAAEAAAArAAMAAAAAAAEAAAArAAQAAAAAAAEAAAArAAUAAAAAAAEAAAArAAYAAAAAAAEAAAArAAcAAAAAAAEAAAArAAgAAAAAAAEAAAArAA4AAAAAAAEAAAArAAkAAAAAAAEAAAArAAoAAAAAAAEAAAArAAsAAAAAAAEAAAArAAwAAAAAAAEAAAArAA0AAAAAAAEAAAD8/xAAAAABAAEAAAD9/xAAAAABAAEAAAD+/xAAAAABAAEAAAD//xAAAAABAAEAAAAAABAAAAABAAEAAAABABAAAAABAAEAAAACABAAAAABAAEAAAADABAAAAABAAEAAAAEABAAAAABAAEAAAAFABAAAAABAAEAAAAGABAAAAABAAEAAAAHABAAAAABAAEAAAAIABAAAAABAAEAAAAJABAAAAABAAEAAAAKABAAAAABAAEAAAALABAAAAABAAEAAAAMABAAAAABAAEAAAANABAAAAABAAEAAAAOABAAAAABAAEAAAAPABAAAAABAAEAAAAQABAAAAABAAEAAAARABAAAAABAAEAAAASABAAAAABAAEAAAATABAAAAABAAEAAAAUABAAAAABAAEAAAAVABAAAAABAAEAAAAWABAAAAABAAEAAAAXABAAAAABAAEAAAAYABAAAAABAAEAAAAZABAAAAABAAEAAAAaABAAAAABAAEAAAAbABAAAAABAAEAAAAcABAAAAABAAEAAAAdABAAAAABAAEAAAAeABAAAAABAAEAAAAfABAAAAABAAEAAAAgABAAAAABAAEAAAAhABAAAAABAAEAAAAiABAAAAABAAEAAAAjABAAAAABAAEAAAAkABAAAAABAAEAAAAlABAAAAABAAEAAAAmABAAAAABAAEAAAAnABAAAAABAAEAAAAoABAAAAABAAEAAAApABAAAAABAAEAAAD6//v/AAAEAAAAAAD6//z/AAAEAAEAAAD7//v/AAAFAAAAAAD6/w8AAAAEAAIAAAD6/xAAAAAEAAMAAAD7/xAAAAAFAAMAAAAqABAAAAAGAAMAAAArAA8AAAAHAAIAAAArABAAAAAHAAMAAAAqAPv/AAAGAAAAAAArAPv/AAAHAAAAAAArAPz/AAAHAAEAAAAOAAoAAAACAAAAAAAOAAsAAAACAAEAAAAPAAoAAAADAAAAAAAPAAsAAAADAAEAAAAVAAkAAAAHAAEAAAD7//z/AAAFAAEAAAD7/w8AAAAFAAIAAAAqAA8AAAAGAAIAAAAqAPz/AAAGAAEAAAAIAAgAAAACAAAAAAAIAAkAAAACAAEAAAAIAAoAAAAEAAIAAAAIAAsAAAAEAAMAAAAJAAgAAAADAAAAAAAJAAkAAAADAAEAAAAJAAoAAAAFAAIAAAAJAAsAAAAFAAMAAAAKAAgAAAAGAAAAAAAKAAkAAAAGAAEAAAAKAAoAAAAGAAIAAAAKAAsAAAAGAAMAAAALAAgAAAAHAAAAAAALAAkAAAAHAAEAAAALAAoAAAAHAAIAAAALAAsAAAAHAAMAAAASAAgAAAACAAAAAAASAAkAAAACAAEAAAASAAoAAAAEAAIAAAASAAsAAAAEAAMAAAATAAgAAAADAAAAAAATAAkAAAADAAEAAAATAAoAAAAFAAIAAAATAAsAAAAFAAMAAAAUAAgAAAAGAAAAAAAUAAkAAAAGAAEAAAAUAAoAAAAGAAIAAAAUAAsAAAAGAAMAAAAVAAgAAAAHAAAAAAAVAAoAAAAHAAIAAAAVAAsAAAAHAAMAAAA=")
tile_set = ExtResource("4_gnp6h")
metadata/_edit_lock_ = true
